After self-review: eliminate unchecked cast, fix unsafe cast, remove dead code, use switch expressions, extract test helpers
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>